fixed it to be a column layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -135,8 +135,14 @@ main {
 }
 
 @media only screen and (max-width: 820px) {
+  .location-box .location  {
+    display: flex;
+    flex-direction: column;
+  }
   .img-wrap {
-    height: 100%;
+    height: 100px;
+    width: 100px;
+    margin: 0 auto;
   }
   .location-name {
     font-size: 30px;
@@ -153,4 +159,5 @@ main {
   .search-box {
     margin: 0 0 50px;
   }
+  
 } 
